--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -7,7 +7,7 @@ version : v0.2a
 [General]
 prefix : ~
 servers : ["The Archive", "MyServer", "Music Hoarders"]
-channels : ["general", "bot", "youtube-archive-me"]
+channels : ["bot", "youtube-archive-me", "🤖bot-commands"]
 
 
 ; Bot extensions (optional)
